Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ locale:       "en"
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: pretty
+permalink: "/:year/:month/:day/:title/"
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
