Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
     shortname: infitialis-blog
+    # Base URL
+    baseurl: "https://www.infitialis.com/"
 
 # Set the Sass partials directory, as we're using @imports
 sass:
